--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "firebase": "^11.6.0",
     "formik": "^2.4.6",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
